<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SPB Bus Hound</string>
    <string name="satellite_view">Satellite</string>
    <string name="street_view">Street</string>
    <string name="vehicle_bus">Autobus</string>
    <string name="vehicle_trolley">Trolley</string>
    <string name="vehicle_tram">Tram</string>
    <string name="vehicle_ship">Aquabus</string>
    <string name="cur_location">Current</string>
    <string name="home_location">My Bookmark</string>
    <string name="settings">Settings</string>
    <string name="vehicle_type">Layers</string>
    <string name="map_type">Map type</string>
    <string name="refresh_period">Refresh Time</string>
    <string name="my_place">My Bookmark</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose_period">Choose</string>
    <integer name="width">100</integer>
    <integer name="heigth">100</integer>
    <string name="sync_picker">Choose refresh period (sec)</string>
    <string name="info">Information</string>
    <string name="version">${app.version}</string>
    <string name="copyright">&#169; 2014 Alexey Emelyanenko</string>
    <string name="email">alexey.emelyanenko@gmail.com</string>
    <string name="addmyplace">Add bookmark at %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wait">Please wait...</string>
    <string name="notfound">Address not defined</string>
    <string name="server_error">No connection to server</string>
    <string name="error_title">Error</string>
    <string name="ok">OK</string>
    <string name="vehicleTypes">Transport</string>
    <string name="map_params">Map Parameters</string>
    <string name="map_sync_time">Refresh Time</string>
    <string name="map_provider">Map provider</string>
    <string name="version_title">Version</string>
    <string name="copyright_title">Copyright</string>
    <string name="vehicle_types">Transport Type</string>
    <string name="choose_vehicles">Choose Transport</string>
    <string-array name="sync_string_array">
        <item>5 sec</item>
        <item>10 sec</item>
        <item>15 sec</item>
        <item>20 sec</item>
        <item>30 sec</item>
        <item>45 sec</item>
        <item>60 sec</item>
        <item>90 sec</item>
        <item>120 sec</item>
    </string-array>
    <string-array name="sync_string_values">
        <item>5000</item>
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
        <item>30000</item>
        <item>45000</item>
        <item>60000</item>
        <item>90000</item>
        <item>120000</item>
    </string-array>
    <string-array name="map_types_entries">
        <item>Street</item>
        <item>Satellite</item>
    </string-array>
    <string-array name="map_types_values">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="map_provider_entries">
        <item>Google Maps v.1</item>
        <item>Google Maps v.2</item>
    </string-array>
    <string-array name="map_provider_values">
        <item>GMAPSV1</item>
        <item>GMAPSV2</item>
        <item>OSM</item>
    </string-array>
    <string-array name="vehicle_types_values">
        <item>BUS</item>
        <item>TRAM</item>
        <item>TROLLEY</item>
        <item>SHIP</item>
    </string-array>
    <string-array name="vehicle_types_entries">
        <item>Autobus</item>
        <item>Tram</item>
        <item>Trolley</item>
        <item>Aquabus</item>
    </string-array>
    <string-array name="app_theme_values">
        <item>HOLO_BLACK</item>
        <item>HOLO_LIGHT</item>
    </string-array>
    <string-array name="app_theme_entries">
        <item>Black</item>
        <item>Light</item>
    </string-array>

    <string-array name="menu_items_array">
        <item>Search</item>
        <item>My Bookmark</item>
        <item>Settings</item>
        <item>Info</item>
    </string-array>
    <array name="menu_items_icon_array">
        <item>@android:drawable/ic_menu_search</item>
        <item>@android:drawable/ic_menu_myplaces</item>
        <item>@android:drawable/ic_menu_preferences</item>
        <item>@android:drawable/ic_menu_info_details</item>
        <item></item>
        <item></item>
    </array>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="search_page">Search</string>
    <string name="app_not_available">Sorry, action not available</string>
    <string name="search_hint">Enter route number</string>
    <string name="show_traffic">Show Traffic</string>
    <string name="selected_routes">Selected Routes</string>
    <string name="clear_selection">Clear</string>
    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="app_params">General</string>
    <string name="app_theme">Theme</string>
    <string name="icon_size">Icon Size</string>
    <string name="icon_size_title">Please select a value for the transport icons:</string>
    <string name="removemyplace">Remove bookmark?</string>
    <string name="place_not_defined">Value is not set</string>

    <array name="icon_size_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </array>
</resources>
