<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_height="fill_parent"
                  android:layout_width="fill_parent">
    <PreferenceCategory
            android:title="@string/vehicleTypes"
            android:key="pref_transport">
        <MultiSelectListPreference
                android:key="vehicle_types"
                android:title="@string/vehicle_types"
                android:dialogTitle="@string/choose_vehicles"
                android:entries="@array/vehicle_types_entries"
                android:entryValues="@array/vehicle_types_values"/>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/map_params"
            android:key="pref_map_params">
        <ListPreference
                android:title="@string/map_type"
                android:key="map_type"
                android:entries="@array/map_types_entries"
                android:entryValues="@array/map_types_values"/>
        <ListPreference
                android:title="@string/map_sync_time"
                android:key="map_sync_time"
                android:entries="@array/sync_string_array"
                android:entryValues="@array/sync_string_values"/>
        <CheckBoxPreference
                android:title="@string/show_traffic"
                android:key="map_show_traffic"
                android:defaultValue="false"
                />
        <Preference
                android:title="@string/my_place"
                android:key="my_place"
                android:defaultValue="@string/notfound"
                android:selectable="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/app_params"
                        android:key="pref_app_params">
        <ListPreference
                android:title="@string/app_theme"
                android:key="app_theme"
                android:entries="@array/app_theme_entries"
                android:entryValues="@array/app_theme_values"/>
    </PreferenceCategory>
</PreferenceScreen>