<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_type"
            android:textColor="@android:color/white"/>

    <CheckBox android:id="@+id/vehicle_bus"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="@string/vehicle_bus"/>
    <CheckBox android:id="@+id/vehicle_trolley"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="@string/vehicle_trolley"/>
    <CheckBox android:id="@+id/vehicle_tram"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="@string/vehicle_tram"/>
    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_type"
            android:textColor="@android:color/white"/>

    <RadioGroup android:id="@+id/map_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        <RadioButton android:id="@+id/street_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/street_view"/>
        <RadioButton android:id="@+id/satellite_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/satellite_view"/>
    </RadioGroup>

    <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh_period"/>

    <Spinner android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:prompt="@string/choose_period"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center">
        <Button android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:minHeight="52dp"
            android:textSize="14dp"
            android:onClick="onSaveButtonClick"/>
        <Button android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_toRightOf="@+id/save"
            android:minHeight="52dp"
            android:textSize="14dp"
            android:onClick="onCancelButtonClick"/>
    </RelativeLayout>
</LinearLayout>